@@ -18,11 +18,20 @@ public class FTPHandler {
         }	
     	System.out.println("Logging into ftp server " + ftp.getServer());
         FTPClient ftpClient = new FTPClient();
+		ftpClient.setConnectTimeout(5000); //5s
+		ftpClient.setDataTimeout(5000); //5s
+		
         ftpClient.connect(ftp.getServer());
-        ftpClient.login(ftp.getUsername(), ftp.getPassword());
+        boolean login = ftpClient.login(ftp.getUsername(), ftp.getPassword());
+        if(!ftpClient.isConnected() || !login){
+        	System.out.println("Connection Failed! "+(!login ? "Wrong username/password" : "Connection not available!"));
+        	return null;
+        }
+        
         if (ftp.getDirectory() != null) {
             ftpClient.changeWorkingDirectory(ftp.getDirectory());
         }	
+        
 		return ftpClient;
 	}
     
